Updatem mew select and mew input

--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -17,11 +17,17 @@ a {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
 .no-display {
   display: none;
 }
+
 .no-pointer-events {
   pointer-events: none;
+}
+
+.all-pointer-events {
+  pointer-events: all;
 }
 
 .text-decoration-underline {
