update mew input and mew select

--- a/src/assets/styles/basics/_input.scss
+++ b/src/assets/styles/basics/_input.scss
@@ -56,7 +56,7 @@
         height: 32px;
         padding: 8px 22px 8px 48px;
       }
-      .v-list-item--link {
+      .v-list-item {
         border-bottom: 1px solid var(--v-selectBorder-base);
       }
     }
