change label scale

--- a/src/assets/styles/basics/_input.scss
+++ b/src/assets/styles/basics/_input.scss
@@ -84,19 +84,21 @@
       color: var(--v-titlePrimary-base) !important;
       font-size: 14px;
     }
-
-  /**
+    /**
     * Input label
     */
     .v-label {
-      color: var(--v-titlePrimary-base) !important;      
-      font-weight: 400;
+      color: var(--v-inputLabel-base);   
+      font-weight: 500;
       font-size: 14px;
       text-transform: capitalize;
-
+      
       &.v-label--is-disabled {
         color: var(--v-inputDisabled-base); 
       }
+    }
+    &.v-text-field--outlined .v-label--active {
+      transform: translateY(-24px) scale(0.85) !important;
     }
   /**
     * Input placeholder
@@ -126,12 +128,12 @@
     */
   &.mew-select {   
     .label-token-img {
-      margin-right: -20px;
+      margin-right: -25px;
     }
     .total-token-placeholder {
       border-radius: 50%;        
-      height: 38px;
-      width: 38px;
+      height: 44px;
+      width: 44px;
     }
     &.v-text-field--enclosed .v-input__append-inner {
       height: 100%;
