--- a/src/assets/styles/basics/_input.scss
+++ b/src/assets/styles/basics/_input.scss
@@ -90,7 +90,7 @@
     .v-label {
       color: var(--v-inputLabel-base);   
       font-weight: 500;
-      font-size: 14px;
+      font-size: 1rem;
       text-transform: capitalize;
       
       &.v-label--is-disabled {
