--- a/src/assets/styles/basics/_typography.scss
+++ b/src/assets/styles/basics/_typography.scss
@@ -41,9 +41,9 @@
   
   .mew-body {
   /* size - 14px ,  height - 19px */
-  font-size: 1rem; 
+  font-size: 1rem !important; 
   font-weight: 400;
-  line-height: 1.357rem;
+  line-height: 1.357rem !important;
   }
   
   .mew-caption {
