devop: remove important

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -8,7 +8,7 @@
 html,
 body {
   font-family: 'Roboto', sans-serif;
-  font-size: 14px !important;
+  font-size: 14px;
   font-style: normal;
   font-weight: 400;
 }
