--- a/src/assets/styles/basics/_input.scss
+++ b/src/assets/styles/basics/_input.scss
@@ -127,12 +127,13 @@
     */
   &.mew-select {   
     .label-token-img {
-      margin-right: -25px;
+      margin-right: -13px;
     }
     .total-token-placeholder {
-      border-radius: 50%;        
-      height: 40px;
-      width: 40px;
+      border-radius: 50%;  
+      font-size: 8px;      
+      height: 24px;
+      width: 24px;
     }
     &.v-text-field--enclosed .v-input__append-inner {
       height: 100%;
@@ -161,10 +162,15 @@
     }
   }
   &.mew-select-search {
+    background: var(--v-white-base);
     border-bottom: 1px solid var(--v-dropdownBorder-base);
     border-radius: 5px;
     height: 42px;
     padding: 12px 16px;
+    position: sticky;
+    top: 0;
+    width: 100%;
+    z-index: 9999;
     .v-icon {
       font-size: 18px;
     }
