Add border to tokens

--- a/src/assets/styles/basics/_input.scss
+++ b/src/assets/styles/basics/_input.scss
@@ -149,7 +149,7 @@
         display: none;
       }
     }
-    .item-img {
+    .mew-select-item-img {
       margin-right: 5px;
       max-height: 25px;
     }
