--- a/src/assets/styles/basics/_input.scss
+++ b/src/assets/styles/basics/_input.scss
@@ -81,15 +81,15 @@
   */
   .v-input {
     input {
-      color: var(--v-titlePrimary-base) !important;
+      color: var(--v-textBlack-base) !important;
       font-size: 14px;
     }
     /**
     * Input label
     */
     .v-label {
-      color: var(--v-inputLabel-base);   
-      font-weight: 500;
+      color: var(--v-textSecondary-base);   
+      font-weight: 400;
       font-size: 1rem;
       
       &.v-label--is-disabled {
