add trsnaprent color and change circle

--- a/src/assets/styles/basics/_input.scss
+++ b/src/assets/styles/basics/_input.scss
@@ -80,6 +80,7 @@
   * Inputs
   */
   .v-input {
+    color: transparent;
     input {
       color: var(--v-textBlack-base) !important;
       font-size: 14px;
