--- a/src/assets/styles/basics/_input.scss
+++ b/src/assets/styles/basics/_input.scss
@@ -76,11 +76,21 @@
     color: var(--v-inputBorder-base) !important;
   }
 
+  /**
+  * This removes the underlying black outline for address select and mew input
+  */
+  .theme--light {
+    &.address-select, &.mew-input {
+      &.v-input {
+        color: transparent;
+      }
+    }
+  }
+
 /**
   * Inputs
   */
   .v-input {
-    color: transparent;
     input {
       color: var(--v-textBlack-base) !important;
       font-size: 14px;
