add in text area

--- a/src/assets/styles/basics/_input.scss
+++ b/src/assets/styles/basics/_input.scss
@@ -80,7 +80,7 @@
   * This removes the underlying black outline for address select and mew input
   */
   .theme--light {
-    &.address-select, &.mew-input {
+    &.address-select, &.mew-input, &.mew-text-area {
       &.v-input {
         color: transparent;
       }
