--- a/src/assets/styles/basics/_input.scss
+++ b/src/assets/styles/basics/_input.scss
@@ -77,7 +77,7 @@
   }
 
   /**
-  * This removes the underlying black outline for address select and mew input
+  * This removes the underlying black outline for mew address select, mew text area and mew input
   */
   .theme--light {
     &.address-select, &.mew-input, &.mew-text-area {
