--- a/src/assets/styles/basics/_button.scss
+++ b/src/assets/styles/basics/_button.scss
@@ -2,25 +2,10 @@
   * Global Button styles
   */
 .v-application {
-  // v-btn
+  // v-btn (mew button)
   .v-btn.mew-button {
-    text-transform: capitalize;
-
     .v-btn__content {
       max-width: 100%;
     }
   }
-
-  // disabled button 
-  .theme--light.v-btn.mew-button.v-btn--disabled,.theme--dark.v-btn.mew-button.v-btn--disabled {
-    background-color: var(--v-white-base) !important;
-    border: 1px solid var(--v-disabled-base);
-    color: var(--v-disabled-base) !important;
-    pointer-events: none;
-
-    .icon {
-      filter: grayscale(100%);
-    }
-  }
-
 }
