--- a/src/assets/styles/basics/_button.scss
+++ b/src/assets/styles/basics/_button.scss
@@ -4,6 +4,7 @@
 .v-application {
   // v-btn (mew button)
   .v-btn.mew-button {
+    text-transform: capitalize;
     .v-btn__content {
       max-width: 100%;
     }
