--- a/stories/GlobalStorybook.scss
+++ b/stories/GlobalStorybook.scss
@@ -35,6 +35,13 @@
   }
 }
 
+
+#story--mewbutton--slot-button {
+  .v-application {
+    height: 80px;
+  }
+}
+
 #story--mewbutton--background-button {
   .v-application {
     height: 80px;
