--- a/stories/GlobalStorybook.scss
+++ b/stories/GlobalStorybook.scss
@@ -16,7 +16,8 @@
 #story--mewnotification--mew-notification,
 #story--mewtransformhash--mew-transform-hash,
 #story--mewaddressselect--mew-address-select,
-#story--mewalert--mew-alert
+#story--mewalert--mew-alert,
+#story--mewcopy--mew-copy
    {
   .v-application {
     height: 250px;
@@ -30,7 +31,8 @@
 #story--mewbutton--transparent-button,
 #story--mewbutton--icon-button,
 #story--mewbutton--icon-title-button,
-#story--mewtokencontainer--mew-token-container 
+#story--mewtokencontainer--mew-token-container,
+#story--mewcheckbox--mew-checkbox
  {
   .v-application {
     height: 80px;
