install storybook eslint, add more doc

--- a/stories/GlobalStorybook.scss
+++ b/stories/GlobalStorybook.scss
@@ -1,5 +1,5 @@
 /**
-  * styles used to set the height of the component preview for documentation purposes.
+  * styles used to set the height of the preview component for documentation purposes.
   */
 #story--mewtooltip--mew-tooltip,
 #story--mewsuperbutton--mew-super-button, 
@@ -17,7 +17,7 @@
 #story--mewtransformhash--mew-transform-hash,
 #story--mewaddressselect--mew-address-select,
 #story--mewalert--mew-alert,
-#story--mewcopy--mew-copy
+#story--mewdropdown--mew-dropdown
    {
   .v-application {
     height: 250px;
