--- a/src/assets/styles/basics/_typography.scss
+++ b/src/assets/styles/basics/_typography.scss
@@ -11,6 +11,7 @@
   font-size: 3.428rem;
   font-weight: 700;
   line-height: 4.571rem;
+  letter-spacing: 0.0178rem;
 }
 
 .mew-subtitle {
@@ -18,34 +19,35 @@
   font-size: 2.285rem;
   font-weight: 700;
   line-height: 3.142rem;
+  letter-spacing: 0.0178rem;
 }
 
 .mew-heading-1 {
-  /* size - 24px,  line-height - 44px */
+  /* size - 24px */
   font-size: 1.714rem;
   font-weight: 700;
   }
   
   .mew-heading-2 {
-  /* size - 20px,  line-height - 28px */
+  /* size - 20px */
   font-size: 1.429rem !important;
   font-weight: 700 !important;
   }
   
   .mew-heading-3 {
-  /* size - 16px,  line-height - 24px */
+  /* size - 16px*/
   font-size: 1.143rem; 
   font-weight: 700;
   }
   
 .mew-body {
-  /* size - 14px ,  line-height - 20px */
+  /* size - 14px*/
   font-size: 1rem !important; 
   font-weight: 400;
 }
   
  .mew-caption {
-  /* size - 12px,  line-height - 20px */
+  /* size - 12px*/
   font-size: 0.8571rem;
   font-weight: 700; 
   text-transform: uppercase;
