devop: update corder radius and add option to change title font size

--- a/src/assets/styles/basics/_input.scss
+++ b/src/assets/styles/basics/_input.scss
@@ -137,4 +137,10 @@
     width: 25px;
     border-radius: 50%;
   }
+/**
+  * Adjust dialog corder border radius
+  */
+  .v-dialog {
+    border-radius: 12px !important;
+  }
 }
